syntax = "proto3";

import "google/protobuf/empty.proto";

package story;

option go_package = "github.com/SanishKumar/story-builder/proto/story";

// Message for a story segment.
message StorySegment {
  string id = 1;               // Unique segment ID.
  string text = 2;             // The story text.
  int32 votes = 3;             // Votes for this segment.
}

// Request for generating a new segment.
message GenerateRequest {
  string prompt = 1;           // User-provided prompt.
}

// Response for generated segment.
message GenerateResponse {
  string generated_text = 1;   // Text generated by the AI.
}

// Message for real-time updates.
message UpdateRequest {
  string story_id = 1;         // ID of the story.
  StorySegment segment = 2;    // New segment data.
}

// Streaming response for collaborative updates.
message UpdateResponse {
  repeated StorySegment segments = 1; // List of current segments.
}

// Service definition.
service StoryService {
  // Unary call to generate a story segment using the generative AI API.
  rpc GenerateSegment(GenerateRequest) returns (GenerateResponse) {}

  // Server streaming call to send real-time updates to clients.
  rpc StreamStoryUpdates(google.protobuf.Empty) returns (stream UpdateResponse) {}

  // Unary call to submit a new segment (or vote) for the story.
  rpc SubmitSegment(UpdateRequest) returns (google.protobuf.Empty) {}
}
